# stack_exposures

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
.github/workflows/: cmake.yml  docker-image.yml
cmake_modules/: CodeCoverage.cmake
docker_scripts/in_container/: build.sh
docker_scripts/on_host/: create_image.sh  run_tests.sh
include/: aligned_image_generator.hpp  cmd_options.hpp  i_image_stacker.hpp  image_aligner.hpp  image_info.hpp  image_loader.hpp  image_stacker.hpp  mean_image_stacker.hpp  shared_ptrs.hpp  str_util.hpp
scripts/: debug_build.sh  release_build.sh
scripts/docker/in_container/: build.sh  test.sh
scripts/docker/on_host/: build_stack_exposures.sh  create_image.sh  run_tests.sh
src/: aligned_image_generator.cpp  cmd_options.cpp  image_aligner.cpp  image_info.cpp  image_loader.cpp  image_stacker.cpp  main.cpp  mean_image_stacker.cpp  str_util.cpp
tests/: CMakeLists.txt
tests/data/: README.md
tests/src/: test_cmd_options.cpp  test_image_aligner.cpp  test_image_info.cpp  test_image_loader.cpp  test_image_stacker.cpp  test_mean_image_stacker.cpp  test_stretch_image_stacker.cpp
